# rpaframework-workitems

./: .gitignore  Makefile  devenv.nix  pyproject.toml
devenv/modules/: vscode.nix
src/RPA/: RobotLogListener.py  helpers.py  utils.py
src/RPA/Robocorp/: Vault.py  WorkItems.py  utils.py
tests/python/: test_robocorp_vault.py  test_robocorp_workitems.py
tests/resources/: CustomLibrary.py
tests/resources/work-items/: items.json
tests/robot/: test_robocorp_workitems.robot
